Fix Dockerfile paths for Render

--- a/ProyectoParqueoApp/Dockerfile
+++ b/ProyectoParqueoApp/Dockerfile
@@ -6,10 +6,13 @@ EXPOSE 80
 # Etapa build
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
-COPY ["ProyectoParqueoApp/ProyectoParqueoApp.csproj", "ProyectoParqueoApp/"]
-RUN dotnet restore "ProyectoParqueoApp/ProyectoParqueoApp.csproj"
+# Copiamos el .csproj directamente desde el root directory
+COPY ["./ProyectoParqueoApp.csproj", "./"]
+RUN dotnet restore "./ProyectoParqueoApp.csproj"
+
+# Copiamos todo el código
 COPY . .
-WORKDIR "/src/ProyectoParqueoApp"
+WORKDIR "/src"
 RUN dotnet publish -c Release -o /app/publish
 
 # Etapa final
@@ -17,3 +20,4 @@ FROM base AS final
 WORKDIR /app
 COPY --from=build /app/publish .
 ENTRYPOINT ["dotnet", "ProyectoParqueoApp.dll"]
+
