Add OutputType Exe and fix Dockerfile for CS5001

--- a/ProyectoParqueoApp/Dockerfile
+++ b/ProyectoParqueoApp/Dockerfile
@@ -6,10 +6,8 @@ EXPOSE 80
 # Etapa build
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
-# Copiamos todo el contenido de la carpeta del proyecto
 COPY . .
-
-# Publicamos usando el csproj dentro de la misma carpeta
+RUN dotnet restore "ProyectoParqueoApp.csproj"
 RUN dotnet publish "ProyectoParqueoApp.csproj" -c Release -o /app/publish
 
 # Etapa final
@@ -17,4 +15,5 @@ FROM base AS final
 WORKDIR /app
 COPY --from=build /app/publish .
 ENTRYPOINT ["dotnet", "ProyectoParqueoApp.dll"]
+
 
