Fix OutputType Exe and Dockerfile for .NET 9 MVC

--- a/ProyectoParqueoApp/ProyectoParqueoApp.csproj
+++ b/ProyectoParqueoApp/ProyectoParqueoApp.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <OutputType>Exe</OutputType> <!-- Esta línea es clave -->
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,3 +15,4 @@
   </ItemGroup>
 
 </Project>
+
