--- a/ProyectoParqueoApp/Dockerfile
+++ b/ProyectoParqueoApp/Dockerfile
@@ -7,6 +7,8 @@ EXPOSE 80
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
 COPY . .
+
+# Restaurar y publicar desde la misma carpeta donde está el .csproj
 RUN dotnet restore "ProyectoParqueoApp.csproj"
 RUN dotnet publish "ProyectoParqueoApp.csproj" -c Release -o /app/publish
 
@@ -15,5 +17,6 @@ FROM base AS final
 WORKDIR /app
 COPY --from=build /app/publish .
 ENTRYPOINT ["dotnet", "ProyectoParqueoApp.dll"]
+
 
 
