--- a/ProyectoParqueoApp/ProyectoParqueoApp.csproj
+++ b/ProyectoParqueoApp/ProyectoParqueoApp.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <OutputType>Exe</OutputType> <!-- Esta línea es clave -->
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,4 +15,5 @@
   </ItemGroup>
 
 </Project>
+
 
